# hetero-cp-ringattn

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  generate_long_prompts.py  hcp_architecture_slide.html  hcp_slide_mini.html  kimi-export-749fedc6-20260522-134329.md  kimi-export-749fedc6-20260522-160416.md  monitor_a100_ab.sh  monitor_a100_long_context.sh  run_a100_4domain.sh  run_a100_env.sh  run_a100_long_context.sh  run_a100_serial_vs_overlap.sh  run_a100_single_node.sh  run_a100_tests.sh
config/: minimal_2domain_ring.json  test_prompts.txt
docs/: 1M_CONTEXT_THUNDERBOLT_PLAN.md  2domain_mps_hip_scale_matrix.md  A100_VALIDATION_REPORT.md  BLOCK_RING_FUSION.md  CORRECTNESS_REPORT.md  DEPLOYMENT_GUIDE.md  DESIGN.md  HISTORY_AND_LESSONS.md  HLPP_VS_HCP.md  INFERENCE_PIPELINE.md  MANUAL_RUN_GUIDE.md  PLUGIN_ARCHITECTURE.md  PRODUCT_THESIS.md  PROTOCOL_SMOKE.md  RINGATTN_MODEL.md  RING_DERIVATIVES_BENCHMARK.md  ROADMAP.md  RUST_CPP_TORCH_PLAN.md  SCALING_ARGUMENT.md  TCH_BACKEND_DESIGN.md  (+6 more)
hcp_vllm_plugin/: README.md  compat_check.py  pyproject.toml  validate_decode.py  validate_ring_backend.py  validate_ring_concurrent.py  validate_ring_connector.py  validate_ring_triton_kernel.py
hcp_vllm_plugin/hcp_vllm_plugin/: __init__.py  connector.py  ring_backend.py  ring_connector.py  ring_triton_attn.py
rust/: Cargo.toml  build.rs
rust/examples/: check_tokenizer.rs  check_weight_dtypes.rs  test_bf16.rs  test_bf16_attention_forward.rs  test_bf16_matmul.rs  test_bf16_neginf.rs  test_bf16_scalar_mul.rs
rust/src/: capacity.rs  cli.rs  compute_runtime.rs  distributed_coordinator.rs  distributed_protocol.rs  distributed_worker.rs  error.rs  infer.rs  lib.rs  main.rs  protocol.rs  quic_transport.rs  remote.rs  report.rs  tch_backend.rs
rust/src/api/: mod.rs  server.rs  types.rs
rust/src/distributed/: coordinator.rs  mod.rs  protocol.rs  scheduler.rs  worker.rs
rust/src/distributed/transport/: quic.rs
rust/src/model/: backend.rs  cache.rs  config.rs  distributed_generator.rs  error.rs  generate.rs  generator.rs  kv_transport.rs  layers.rs  mod.rs  model.rs  sampling.rs  weights.rs
rust/src/model/attention/: backend.rs  mod.rs  ring.rs  strategy.rs
rust/src/model/layers/: attention.rs  mlp.rs  mod.rs  norm.rs  rotary.rs
rust/src/model/transport/: block.rs  mock.rs  mod.rs  tcp.rs  trait.rs
rust/src/protocol/: framing.rs  message.rs  mod.rs  node.rs  transport.rs
rust/src/smoke/: correctness.rs  mod.rs  reference_algo.rs
rust/src/smoke/bridges/: cxx.rs  mod.rs  tch.rs
rust/src/worker_sdk/: backend.rs  mod.rs  runtime.rs  tch_backend.rs  vllm_backend.rs
rust/tests/data/: test_weights.safetensors
(+215 files in other folders)
