[package]
name = "hcp-ringattn-rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = []
tch-backend = ["dep:tch"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tch = { version = "0.24.0", optional = true, default-features = false }

[build-dependencies]
cc = "1.0"
