[package]
name = "hcp-ringattn-rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = ["tch-backend"]
tch-backend = ["dep:tch", "dep:half"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
tch = { version = "0.24.0", optional = true, default-features = false }
safetensors = "0.7"
tokenizers = "0.23"
half = { version = "2.7", optional = true }
bytemuck = "1.22"
libc = "0.2"
quinn = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
rcgen = "0.13"
rustls = { version = "0.23", features = ["ring"] }

[build-dependencies]
cc = "1.0"
